--- a/nn/mnist.ipynb
+++ b/nn/mnist.ipynb
@@ -81,9 +81,10 @@
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "# model = Net((28 * 28, 256, 128, 10)).to(device)\n",
+    "l1 = nn.Linear(28 * 28, 256)\n",
+    "\n",
     "model = nn.Sequential(\n",
-    "    nn.Linear(28 * 28, 256),\n",
+    "    l1,\n",
     "    nn.ReLU(),\n",
     "    nn.Linear(256, 128),\n",
     "    nn.ReLU(),\n",
@@ -176,6 +177,23 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = l1.weight.detach().cpu().numpy()\n",
+    "\n",
+    "fig = plt.figure(dpi=200)\n",
+    "fig.subplots_adjust(left=0, right=1, bottom=0, top=1, hspace=0.05, wspace=0.05)\n",
+    "\n",
+    "for idx in range(64):\n",
+    "    ax = fig.add_subplot(8, 8, idx + 1)\n",
+    "    ax.axis('off')\n",
+    "    ax.imshow(w[idx].reshape(28, 28), interpolation='nearest')"
+   ]
   }
  ],
  "metadata": {
@@ -194,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
